Feature #3978 : Add cookie auth for file endpoints
