# community/go-engines-community/lib/api/auth/api.go
@@ -22,6 +22,7 @@ type API interface {
 	Login(c *gin.Context)
 	Logout(c *gin.Context)
 	GetLoggedUserCount(c *gin.Context)
+	GetFileAccess(c *gin.Context)
 }
 
 func NewApi(
@@ -29,12 +30,19 @@ func NewApi(
 	tokenStore token.Store,
 	providers []security.Provider,
 	sessionStore session.Store,
+	cookieName string,
+	cookieMaxAge int,
+	cookieSecure bool,
 ) API {
 	return &api{
 		tokenService: tokenService,
 		tokenStore:   tokenStore,
 		providers:    providers,
 		sessionStore: sessionStore,
+
+		cookieName:   cookieName,
+		cookieMaxAge: cookieMaxAge,
+		cookieSecure: cookieSecure,
 	}
 }
 
@@ -42,6 +50,10 @@ type api struct {
 	tokenService token.Service
 	tokenStore   token.Store
 	providers    []security.Provider
+
+	cookieName   string
+	cookieMaxAge int
+	cookieSecure bool
 
 	sessionStore session.Store
 }
@@ -112,16 +124,15 @@ func (a *api) Login(c *gin.Context) {
 // @ID auth-logout
 // @Accept json
 // @Produce json
+// @Security JWTAuth
 // @Success 204
 // @Router /logout [post]
 func (a *api) Logout(c *gin.Context) {
-	header := c.GetHeader(headerAuthorization)
-	if len(header) < len(bearerPrefix) || !strings.EqualFold(header[:len(bearerPrefix)], bearerPrefix) {
+	tokenString := getToken(c)
+	if tokenString == "" {
 		c.AbortWithStatusJSON(http.StatusUnauthorized, common.UnauthorizedResponse)
 		return
 	}
-
-	tokenString := strings.TrimSpace(header[len(bearerPrefix):])
 	ok, err := a.tokenStore.Delete(c.Request.Context(), tokenString)
 	if err != nil {
 		panic(err)
@@ -161,4 +172,45 @@ func (a *api) GetLoggedUserCount(c *gin.Context) {
 	c.JSON(http.StatusOK, loggedUserCountResponse{
 		Count: count + sessionCount,
 	})
+}
+
+// Get file access
+// @Summary Get file access
+// @Description Get file access
+// @Tags auth
+// @ID auth-get-file-access
+// @Accept json
+// @Produce json
+// @Security JWTAuth
+// @Success 204
+// @Router /file-access [get]
+func (a *api) GetFileAccess(c *gin.Context) {
+	tokenString := getToken(c)
+	if tokenString == "" {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, common.UnauthorizedResponse)
+		return
+	}
+
+	ok, err := a.tokenStore.Exists(c.Request.Context(), tokenString)
+	if err != nil {
+		panic(err)
+	}
+
+	if !ok {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, common.UnauthorizedResponse)
+		return
+	}
+
+	c.SetSameSite(http.SameSiteLaxMode)
+	c.SetCookie(a.cookieName, tokenString, a.cookieMaxAge, "", "", a.cookieSecure, false)
+	c.Status(http.StatusNoContent)
+}
+
+func getToken(c *gin.Context) string {
+	header := c.GetHeader(headerAuthorization)
+	if len(header) < len(bearerPrefix) || !strings.EqualFold(header[:len(bearerPrefix)], bearerPrefix) {
+		return ""
+	}
+
+	return strings.TrimSpace(header[len(bearerPrefix):])
 }
