# community/go-engines-community/lib/api/security.go
@@ -47,6 +47,13 @@ type Security interface {
 	GetPasswordEncoder() password.Encoder
 	GetTokenService() token.Service
 	GetTokenStore() token.Store
+	GetCookieOptions() CookieOptions
+}
+
+type CookieOptions struct {
+	FileAccessName string
+	MaxAge         int
+	Secure         bool
 }
 
 type security struct {
@@ -57,6 +64,8 @@ type security struct {
 	Logger       zerolog.Logger
 
 	apiConfigProvider config.ApiConfigProvider
+
+	cookieOptions CookieOptions
 }
 
 // NewSecurity creates new security.
@@ -66,6 +75,7 @@ func NewSecurity(
 	sessionStore libsession.Store,
 	enforcer libsecurity.Enforcer,
 	apiConfigProvider config.ApiConfigProvider,
+	cookieOptions CookieOptions,
 	logger zerolog.Logger,
 ) Security {
 	return &security{
@@ -74,6 +84,8 @@ func NewSecurity(
 		SessionStore: sessionStore,
 		enforcer:     enforcer,
 		Logger:       logger,
+
+		cookieOptions: cookieOptions,
 
 		apiConfigProvider: apiConfigProvider,
 	}
@@ -165,7 +177,8 @@ func (s *security) GetWebsocketAuthMiddleware() []gin.HandlerFunc {
 func (s *security) GetFileAuthMiddleware() []gin.HandlerFunc {
 	return []gin.HandlerFunc{
 		middleware.Auth([]libsecurity.HttpProvider{
-			httpprovider.NewCookieProvider(s.GetTokenService(), s.GetTokenStore(), s.newUserProvider(), s.Logger),
+			httpprovider.NewCookieProvider(s.GetTokenService(), s.GetTokenStore(),
+				s.newUserProvider(), s.cookieOptions.FileAccessName, s.Logger),
 		}),
 	}
 }
@@ -189,6 +202,10 @@ func (s *security) GetTokenService() token.Service {
 }
 func (s *security) GetTokenStore() token.Store {
 	return token.NewMongoStore(s.DbClient, s.Logger)
+}
+
+func (s *security) GetCookieOptions() CookieOptions {
+	return s.cookieOptions
 }
 
 type casLoginRequest struct {
